--- a/src/app/pages/dashboard/catalogue/buymodal.component.html
+++ b/src/app/pages/dashboard/catalogue/buymodal.component.html
@@ -28,13 +28,7 @@
       <mat-form-field>
         <mat-label>Interest Rate</mat-label>
         <mat-select formControlName="rate">
-          <mat-option value="0%~2%">0%~2%</mat-option>
-          <mat-option value="2%~5%">2%~5%</mat-option>
-          <mat-option value="5%~10%">5%~10%</mat-option>
-          <mat-option value="10%~15%">10%~15%</mat-option>
-          <mat-option value="15%~20%">15%~20%</mat-option>
-          <mat-option value="20%~30%">20%~30%</mat-option>
-          <mat-option value="30%~">30%~</mat-option>
+          <mat-option *ngFor="let rate of rates;let index = index" [value]="index">{{rate}}</mat-option>
         </mat-select>
         <mat-error *ngIf="hasError('rate', 'required')">
           Please insert your rate
@@ -43,11 +37,7 @@
       <mat-form-field>
         <mat-label>Reporting Frequency</mat-label>
         <mat-select formControlName="frequency">
-          <mat-option value="Weekly">Weekly</mat-option>
-          <mat-option value="Bi-Weekly">Bi-Weekly</mat-option>
-          <mat-option value="Monthly">Monthly</mat-option>
-          <mat-option value="Quarterly">Quarterly</mat-option>
-          <mat-option value="Bi-Annually">Bi-Annually</mat-option>
+          <mat-option *ngFor="let frequency of frequencies;let index = index" [value]="index">{{frequency}}</mat-option>
         </mat-select>
         <mat-error *ngIf="hasError('frequency', 'required')">
           Please Choose your Frequency
@@ -84,10 +74,15 @@
   <input type="hidden" name="notify_url" value="{{commission['url_notify']}}">
   <input type="hidden" name="amount" [value]="amountBuy"/>
   <input type="hidden" name="item_name" [value]="itemName">
+  <input type="hidden" name="custom_str1" [value]="payFastForm.get('fundType').value">
+  <input type="hidden" name="custom_str2" [value]="payFastForm.get('rate').value">
+  <input type="hidden" name="custom_str3" [value]="payFastForm.get('frequency').value">
+  <input type="hidden" name="custom_str4" [value]="businessId">
+  <input type="hidden" name="custom_str5" [value]="userData.userId">
   <input type="hidden" name="payment_method" value="{{commission['payment_method']}}">
   <input type="hidden" name="signature" [value]="signature">
-  <mat-card-actions class="text-right">
-    <button type="submit" mat-raised-button color="primary" class="mr-3" (click)="onCheckOut()">Check out</button>
+  <mat-card-actions class="text-right d-block">
+    <button type="submit" mat-raised-button color="primary" class="mr-3 mt-2" (click)="onCheckOut()">Check out</button>
     <button type="button" mat-raised-button (click)="onNoClick()">Cancel</button>
   </mat-card-actions>
 </form>
