--- a/src/app/pages/payfast/cancel/cancel.component.html
+++ b/src/app/pages/payfast/cancel/cancel.component.html
@@ -8,7 +8,7 @@
   <div class="mat-card-header">
     Your payment has been cancelled.
   </div>
-  <button mat-raised-button class="btn-danger" (click)="return()">
+  <button mat-raised-button class="btn-danger" routerLink="/dashboard/catalogue">
     Continue
   </button>
 </mat-card>
