--- a/src/app/pages/payfast/success/success.component.html
+++ b/src/app/pages/payfast/success/success.component.html
@@ -13,7 +13,7 @@
   <div class="mat-card-header">
     Your payment has done successfully.
   </div>
-  <button mat-raised-button color="primary" (click)="setHistory()">
+  <button mat-raised-button color="primary" routerLink="/dashboard/catalogue">
     Continue
   </button>
 </mat-card>
