--- a/src/app/pages/front/home/home.component.html
+++ b/src/app/pages/front/home/home.component.html
@@ -423,7 +423,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-3 col-md-6 col-sm-7">
           <div class="working-item text-center item-1">
-            <i class="fal fa-head-side-brain"></i>
+            <img src="assets/images/think.png">
             <h5 class="title">Idea Generator</h5>
             <p>Avoids pleasure itself, because it is pleasure but because those</p>
             <div class="dot-1">
@@ -433,7 +433,7 @@
         </div>
         <div class="col-lg-3 col-md-6 col-sm-7">
           <div class="working-item text-center item-2">
-            <i class="fal fa-layer-group"></i>
+            <img src="assets/images/info.png">
             <h5 class="title">Info Collect</h5>
             <p>Avoids pleasure itself, because it is pleasure but because those</p>
             <div class="dot-2">
@@ -443,14 +443,14 @@
         </div>
         <div class="col-lg-3 col-md-6 col-sm-7">
           <div class="working-item text-center item-3">
-            <i class="fal fa-unicorn"></i>
+            <img src="assets/images/project.png">
             <h5 class="title">Product Desing</h5>
             <p>Avoids pleasure itself, because it is pleasure but because those</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-7">
           <div class="working-item text-center item-4">
-            <i class="fal fa-upload"></i>
+            <img src="assets/images/rocket.png">
             <h5 class="title">Launch Project</h5>
             <p>Avoids pleasure itself, because it is pleasure but because those</p>
             <div class="dot-3">
