--- a/src/app/pages/dashboard/maindashboard/maindashboard.component.html
+++ b/src/app/pages/dashboard/maindashboard/maindashboard.component.html
@@ -81,29 +81,15 @@
     <mat-divider></mat-divider>
     <mat-card-content>
       <div class="table-responsive">
-        <table mat-table [dataSource]="dataSource">
-          <ng-container matColumnDef="no">
-            <th mat-header-cell *matHeaderCellDef> No. </th>
-            <td mat-cell *matCellDef="let element"> {{element.no}} </td>
-          </ng-container>
-          <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Business Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-          </ng-container>
-          <ng-container matColumnDef="location">
-            <th mat-header-cell *matHeaderCellDef> Country </th>
-            <td mat-cell *matCellDef="let element"> {{element.location}} </td>
-          </ng-container>
-          <ng-container matColumnDef="address">
-            <th mat-header-cell *matHeaderCellDef> Address </th>
-            <td mat-cell *matCellDef="let element"> {{element.address}} </td>
-          </ng-container>
-
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
+        <table class="mat-table"><thead><tr>
+            <th>No.</th><th>Business Name</th><th>Country</th><th>Address</th>
+          </tr></thead><tbody><tr *ngFor="let business of dataSource">
+            <td>{{business.no}}</td><td>{{business.name}}</td><td>{{business.location}}</td><td>{{business.address}}</td>
+        </tr></tbody></table>
       </div>
-      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+      <mat-paginator #paginator [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 20]" [showFirstLastButtons]="true" [length]="totalSize"
+                     [pageIndex]="currentPage" (page)="handlePage($event)">
+      </mat-paginator>
     </mat-card-content>
   </mat-card>
 </div>
